--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,16 +3,16 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="6.2.0-alpha" />
+    <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="AspNetCore.HealthChecks.Redis" Version="6.0.4" />
     <PackageVersion Include="EasyCaching.Core" Version="1.9.0" />
     <PackageVersion Include="EasyCaching.Serialization.MessagePack" Version="1.9.0" />
     <PackageVersion Include="FluentValidation" Version="11.5.2" />
     <PackageVersion Include="HotChocolate.Abstractions" Version="13.0.5" />
-    <PackageVersion Include="HotChocolate.Diagnostics" Version="13.1.0" />
-    <PackageVersion Include="HotChocolate.AspNetCore" Version="13.1.0" />
-    <PackageVersion Include="HotChocolate.Data" Version="13.1.0" />
-    <PackageVersion Include="HotChocolate.Data.EntityFramework" Version="13.1.0" />
+    <PackageVersion Include="HotChocolate.Diagnostics" Version="13.2.0" />
+    <PackageVersion Include="HotChocolate.AspNetCore" Version="13.2.0" />
+    <PackageVersion Include="HotChocolate.Data" Version="13.2.0" />
+    <PackageVersion Include="HotChocolate.Data.EntityFramework" Version="13.2.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageVersion Include="NKZSoft.FluentValidation.Options" Version="1.1.0" />
     <PackageVersion Include="Npgsql.OpenTelemetry" Version="7.0.4" />
@@ -28,7 +28,7 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9.14" />
     <PackageVersion Include="StackExchange.Redis" Version="2.6.111" />
     <PackageVersion Include="EasyCaching.Redis" Version="1.9.0" />
-    <PackageVersion Include="System.ServiceModel.Primitives" Version="4.10.2" />
+    <PackageVersion Include="System.ServiceModel.Primitives" Version="6.0.0" />
     <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
     <PackageVersion Include="AspNetCore.HealthChecks.Rabbitmq" Version="6.0.2" />
     <PackageVersion Include="Microsoft.NETCore.Platforms" Version="7.0.2" />
@@ -51,12 +51,12 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-    <PackageVersion Include="EFCoreSecondLevelCacheInterceptor" Version="3.9.1" />
+    <PackageVersion Include="EFCoreSecondLevelCacheInterceptor" Version="3.9.2" />
     <PackageVersion Include="AspNetCore.HealthChecks.NpgSql" Version="6.0.2" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
     <PackageVersion Include="Ardalis.GuardClauses" Version="4.0.1" />
-    <PackageVersion Include="Ardalis.Specification" Version="6.2.0-alpha" />
+    <PackageVersion Include="Ardalis.Specification" Version="7.0.0" />
     <PackageVersion Include="Scrutor" Version="4.2.2" />
     <PackageVersion Include="MediatR" Version="12.0.1" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
@@ -69,8 +69,8 @@
     <PackageVersion Include="Mapster" Version="7.3.0" />
     <PackageVersion Include="Mapster.Async" Version="2.0.0" />
     <PackageVersion Include="Mapster.DependencyInjection" Version="1.0.0" />
-    <PackageVersion Include="Google.Protobuf" Version="3.23.1" />
-    <PackageVersion Include="protobuf-net" Version="3.2.16" />
+    <PackageVersion Include="Google.Protobuf" Version="3.23.2" />
+    <PackageVersion Include="protobuf-net" Version="3.2.26" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.1.1" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.1.1" />
     <PackageVersion Include="protobuf-net.Reflection" Version="3.2.12" />
@@ -82,7 +82,7 @@
     <PackageVersion Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.1" />
     <PackageVersion Include="xunit" Version="2.4.2" />
     <PackageVersion Include="Xunit.Extensions.Ordering" Version="1.4.5" />
     <PackageVersion Include="Xunit.DependencyInjection" Version="8.7.1" />
