#221 Migrate to .NET 8

--- a/deployment/docker/docker-compose-app.yaml
+++ b/deployment/docker/docker-compose-app.yaml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Docker
+      OTEL_DOTNET_EXPERIMENTAL_ASPNETCORE_ENABLE_GRPC_INSTRUMENTATION: 1
     ports:
       - "0.0.0.0:8080:8080"
       - "0.0.0.0:8081:8081"
