--- a/.github/workflows/build-by-tag.yaml
+++ b/.github/workflows/build-by-tag.yaml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+        cache: true
+        cache-dependency-path: '**/packages.lock.json'
     - name: Restore Dependencies
       run: dotnet restore
     - name: Build
