CI/CD:Added permissions for writing to PR

--- a/.github/workflows/build-by-branch.yaml
+++ b/.github/workflows/build-by-branch.yaml
@@ -13,6 +13,10 @@ on:
       - main
     paths-ignore:
       - "**.md"
+
+permissions:
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
