--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -109,5 +109,6 @@
     <PackageVersion Include="NKZSoft.Service.Configuration.Swagger" Version="1.0.3" />
     <PackageVersion Include="NKZSoft.Service.Configuration.Grpc" Version="1.1.0" />
     <PackageVersion Include="EasyCaching.Serialization.Json" Version="1.9.2" />
+    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.163" />
   </ItemGroup>
 </Project>
