--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+    <PackageReference Include="Meziantou.Analyzer" PrivateAssets="All"/>
   </ItemGroup>
 
 </Project>
