--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -30,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     <PackageReference Include="Meziantou.Analyzer" PrivateAssets="All"/>
+    <PackageReference Include="Roslynator.Analyzers" PrivateAssets="All"/>
   </ItemGroup>
 
 </Project>
