--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -109,5 +109,13 @@
     <PackageVersion Include="NKZSoft.Service.Configuration.Swagger" Version="1.0.3" />
     <PackageVersion Include="NKZSoft.Service.Configuration.Grpc" Version="1.2.1" />
     <PackageVersion Include="EasyCaching.Serialization.Json" Version="1.9.2" />
+    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.163" />
+    <PackageVersion Include="Roslynator.Analyzers" Version="4.12.5" />
+    <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.12.5" />
+    <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.12.5"/>
+    <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.11.20" />
+    <PackageVersion Include="AsyncAwaitBestPractices" Version="8.0.0" />
+    <PackageVersion Include="SerilogAnalyzer" Version="0.15.0" />
+    <PackageVersion Include="CSharpGuidelinesAnalyzer" Version="3.8.5" />
   </ItemGroup>
 </Project>
