XUnit: Migrating from v2 to v3

--- a/tests/NKZSoft.Template.Presentation.GraphQL.Tests/NKZSoft.Template.Presentation.GraphQL.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.GraphQL.Tests/NKZSoft.Template.Presentation.GraphQL.Tests.csproj
@@ -5,8 +5,7 @@
     <PackageReference Include="RestSharp" />
     <PackageReference Include="Serilog.AspNetCore" />
     <PackageReference Include="Serilog.Sinks.Console" />
-    <PackageReference Include="xunit" />
-    <PackageReference Include="Xunit.Extensions.Ordering" />
+    <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
