--- a/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
+++ b/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
@@ -3,8 +3,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="xunit" />
-        <PackageReference Include="Xunit.Extensions.Ordering" />
+        <PackageReference Include="xunit.v3" />
         <PackageReference Include="Xunit.DependencyInjection" />
         <PackageReference Include="xunit.runner.visualstudio">
             <PrivateAssets>all</PrivateAssets>
