--- a/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
+++ b/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
@@ -12,7 +12,7 @@
       <PackageReference Include="Testcontainers" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" />
-      <PackageReference Include="xunit.extensibility.core" />
+      <PackageReference Include="xunit.v3.extensibility.core" />
       <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
 
