--- a/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
+++ b/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
@@ -12,7 +12,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.v3" />
     </ItemGroup>
 
     <ItemGroup>
