--- a/tests/NKZSoft.Template.Presentation.Grpc.Tests/NKZSoft.Template.Presentation.Grpc.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.Grpc.Tests/NKZSoft.Template.Presentation.Grpc.Tests.csproj
@@ -8,8 +8,7 @@
     <ItemGroup>
       <PackageReference Include="Grpc.Net.ClientFactory" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" />
-      <PackageReference Include="xunit" />
-      <PackageReference Include="Xunit.Extensions.Ordering" />
+      <PackageReference Include="xunit.v3" />
       <PackageReference Include="xunit.runner.visualstudio">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
