--- a/tests/NKZSoft.Template.Presentation.Rest.Tests/NKZSoft.Template.Presentation.Rest.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.Rest.Tests/NKZSoft.Template.Presentation.Rest.Tests.csproj
@@ -10,8 +10,7 @@
         <PackageReference Include="RestSharp" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Sinks.Console" />
-        <PackageReference Include="xunit" />
-        <PackageReference Include="Xunit.Extensions.Ordering" />
+        <PackageReference Include="xunit.v3" />
         <PackageReference Include="xunit.runner.visualstudio">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
