--- a/tests/NKZSoft.Template.Presentation.SignalR.Tests/NKZSoft.Template.Presentation.SignalR.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.SignalR.Tests/NKZSoft.Template.Presentation.SignalR.Tests.csproj
@@ -6,8 +6,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
       <PackageReference Include="Serilog.AspNetCore" />
       <PackageReference Include="Serilog.Sinks.Console" />
-      <PackageReference Include="xunit" />
-      <PackageReference Include="Xunit.Extensions.Ordering" />
+      <PackageReference Include="xunit.v3" />
       <PackageReference Include="xunit.runner.visualstudio">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
