--- a/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
+++ b/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
+        
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="xunit.v3" />
@@ -13,7 +14,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="AwesomeAssertions" />
         <PackageReference Include="Moq" />
         <PackageReference Include="Respawn" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
