--- a/tests/NKZSoft.Template.Presentation.Grpc.Tests/NKZSoft.Template.Presentation.Grpc.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.Grpc.Tests/NKZSoft.Template.Presentation.Grpc.Tests.csproj
@@ -17,7 +17,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="FluentAssertions" />
+      <PackageReference Include="AwesomeAssertions" />
       <PackageReference Include="Moq" />
       <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
